	* drivers/mtd/sst25.c:  Improved write performance by fixing a bug
	  that prevented operation in the faster write mode.  The code did
	  not wait on the last write complete before issuing the WRDI  The
	  loop in general failed to wait on the fist 2 bytes after the
	  SST25_AAI if the next 2 were FF FF, then it would reissue the
	  address but not cancel the write. Reorganized to always wait for
	  completion after and address with data write and on any data
	  write so  that the device is complete before WRDI is sent.  From
	  David Sidrane (2013-11-2).
	* configs/sama5/src/sam_can.c:  Add CAN initialization logic
	  and fix a data alignment problem (2013-11-3).
	* drivers/mtd/mtd_config.c:  Updated configuration driver from
	  Ken Pettit (2013-11-4).
	* configs/sim/configdata:  MTD configuration driver unit test for
	  the simulation platform.  From Ken Pettit (2013-11-4).
	* configs/mikroe-stm32f4/fulldemo: Configuration updated by Ken
	  Pettit (2013-11-4).
	* arch/arm/src/stm32/stm32_usbdev.c:  Correct EP0 state handling
	  logic when buffers larger than the EP0 packet size are sent.
	  Also add support for decoded USB trace strings.  From David
	  Sidrane (2013-11-5).
	* drivers/usbdev/cdcacm.c, composite.c, usbmsc.c:  uninitialization
	  logic cause re-use of a stale pointer.  Changed to a two pass
	  uninitialization for the case of the composite driver:  Memory
	  resources are not freed until the second uninitialization pass.
	  From David Sidrane (2011-11-5).
	* arch/arm/src/sama5/sam_pwm.c and .h:  Add PWM driver for SAMA5
	  untested on initial checkout (not even incorporated in to build
	  system) (2013-11-6).
	* arch/arm/src/sama5/Make.defs and Kconfig:  SAMA5 PWM driver now
	  incorporated into build and configuration system.  Builds with
	  no errors (2013-11-6).
	* configs/sama5d3x-ek:  Add support for the PWM test for the
	  SAMA5D3x-EK board (2013-11-6).
	* arch/arm/src/sama5/sam_pwm.c and .h: SAMA5 PWM driver is now
	  function (2013-11-7).
